Responder a una encuesta incluida
